[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fogsim"
version = "0.1.0"
description = "FogSim: A co-simulation framework for robotics and network simulation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
gym = [
    "gym>=0.21.0",
]
carla = [
    "carla>=0.9.13",
]
dashboard = [
    "flask>=2.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
]
all = [
    "gym>=0.21.0",
    "carla>=0.9.13",
    "flask>=2.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/yourusername/fogsim" 